--- a/DI-App/login/Login.xib
+++ b/DI-App/login/Login.xib
@@ -71,6 +71,9 @@
                     <state key="normal" title="SIGN-IN">
                         <color key="titleColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="SignIN:" destination="-1" eventType="touchUpInside" id="xbP-lK-LsC"/>
+                    </connections>
                 </button>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CR9-uF-O2v">
                     <rect key="frame" x="45" y="224" width="285" height="25"/>
