--- a/DI-App/login/Login.xib
+++ b/DI-App/login/Login.xib
@@ -27,45 +27,14 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="Fkv-aG-ZL3">
-                    <rect key="frame" x="16" y="258" width="343" height="91"/>
-                    <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DPN-cL-Qja">
-                            <rect key="frame" x="0.0" y="0.0" width="343" height="24"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLL-7b-mlb">
-                            <rect key="frame" x="0.0" y="61" width="343" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                    </subviews>
-                </stackView>
-                <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzO-7I-syL">
-                    <rect key="frame" x="16" y="357" width="20" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="Yd7-hY-Y5F"/>
-                        <constraint firstAttribute="width" constant="20" id="jSL-dL-JLK"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <state key="selected" title="X">
-                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="rememberMe:" destination="-1" eventType="touchUpInside" id="FzT-d4-4fX"/>
-                    </connections>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember me ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-TR-hhm">
-                    <rect key="frame" x="44" y="357" width="124.5" height="20.5"/>
+                    <rect key="frame" x="73" y="466" width="124.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-op-0lo">
-                    <rect key="frame" x="45" y="437" width="285" height="64"/>
+                    <rect key="frame" x="45" y="543" width="285" height="64"/>
                     <color key="backgroundColor" red="0.0" green="0.17346887143782383" blue="0.69387548575129532" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="43"/>
                     <state key="normal" title="SIGN-IN">
@@ -75,38 +44,72 @@
                         <action selector="SignIN:" destination="-1" eventType="touchUpInside" id="xbP-lK-LsC"/>
                     </connections>
                 </button>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CR9-uF-O2v">
-                    <rect key="frame" x="45" y="224" width="285" height="25"/>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CR9-uF-O2v">
+                    <rect key="frame" x="45" y="224" width="288" height="29"/>
                     <segments>
                         <segment title="Login"/>
                         <segment title="Register"/>
                     </segments>
                 </segmentedControl>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="HwG-x3-Sme">
+                    <rect key="frame" x="16" y="288" width="343" height="150"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Usernamer" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5S-Wu-PuD">
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9a0-Hw-4ib">
+                            <rect key="frame" x="0.0" y="58" width="343" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OtO-rL-M6h">
+                            <rect key="frame" x="0.0" y="116" width="343" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </subviews>
+                </stackView>
+                <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzO-7I-syL">
+                    <rect key="frame" x="16" y="466" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="20" id="VLl-7s-Xbe"/>
+                        <constraint firstAttribute="height" constant="20" id="jpN-Kt-51A"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="selected" title="X">
+                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="rememberMe:" destination="-1" eventType="touchUpInside" id="FzT-d4-4fX"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="jyt-Eo-S2u" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="80" id="9C7-a8-fjP"/>
-                <constraint firstItem="FzO-7I-syL" firstAttribute="top" secondItem="Fkv-aG-ZL3" secondAttribute="bottom" constant="8" id="DeU-0J-gOx"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="8" id="IjM-3P-P3a"/>
-                <constraint firstItem="Zhp-op-0lo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="KXX-ig-4jK"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CR9-uF-O2v" secondAttribute="trailing" constant="45" id="Kjs-EM-iwf"/>
-                <constraint firstItem="jyt-Eo-S2u" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="105" id="LTv-Sp-ck1"/>
-                <constraint firstItem="FzO-7I-syL" firstAttribute="top" secondItem="Fkv-aG-ZL3" secondAttribute="bottom" constant="8" id="NXB-Z6-I3P"/>
-                <constraint firstItem="FzO-7I-syL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="QiE-WQ-Twc"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="top" secondItem="Fkv-aG-ZL3" secondAttribute="bottom" constant="8" id="T0Z-yE-GyV"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="45" id="TgP-Jy-NdD"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Fkv-aG-ZL3" secondAttribute="trailing" constant="16" id="YaV-Og-Q6c"/>
-                <constraint firstItem="CR9-uF-O2v" firstAttribute="top" secondItem="jyt-Eo-S2u" secondAttribute="bottom" constant="70" id="ZZh-1Y-cIn"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jyt-Eo-S2u" secondAttribute="trailing" constant="105" id="aw7-rn-Elw"/>
-                <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="RLs-TR-hhm" secondAttribute="bottom" constant="59.5" id="bfS-dW-l2r"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="206.5" id="ceR-Hi-0Q8"/>
-                <constraint firstItem="FzO-7I-syL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="cnE-r0-Znq"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="8" id="h7c-wA-THQ"/>
-                <constraint firstItem="CR9-uF-O2v" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="hgO-ZF-tBF"/>
-                <constraint firstItem="Fkv-aG-ZL3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="iW3-Vs-Tm1"/>
-                <constraint firstItem="Fkv-aG-ZL3" firstAttribute="top" secondItem="jyt-Eo-S2u" secondAttribute="bottom" constant="104" id="vIO-pk-gFB"/>
-                <constraint firstItem="Fkv-aG-ZL3" firstAttribute="top" secondItem="CR9-uF-O2v" secondAttribute="bottom" constant="10" id="xWQ-DL-ty8"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Zhp-op-0lo" secondAttribute="bottom" constant="166" id="yYq-h2-ejV"/>
+                <constraint firstItem="HwG-x3-Sme" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="0yp-qm-xkx"/>
+                <constraint firstItem="CR9-uF-O2v" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="4CA-wk-AiH"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="45" id="4hz-Pa-sbE"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="37" id="8hI-kQ-uIH"/>
+                <constraint firstItem="FzO-7I-syL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="8xP-Yw-8h7"/>
+                <constraint firstItem="jyt-Eo-S2u" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="105" id="GC6-s1-N1c"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CR9-uF-O2v" secondAttribute="trailing" constant="42" id="GM9-im-wTk"/>
+                <constraint firstItem="FzO-7I-syL" firstAttribute="top" secondItem="HwG-x3-Sme" secondAttribute="bottom" constant="28" id="JNb-qx-p40"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HwG-x3-Sme" secondAttribute="trailing" constant="16" id="Pry-PV-awr"/>
+                <constraint firstItem="HwG-x3-Sme" firstAttribute="top" secondItem="CR9-uF-O2v" secondAttribute="bottom" constant="36" id="Y69-mg-Fp1"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jyt-Eo-S2u" secondAttribute="trailing" constant="105" id="apu-WZ-Jvo"/>
+                <constraint firstItem="CR9-uF-O2v" firstAttribute="top" secondItem="jyt-Eo-S2u" secondAttribute="bottom" constant="70" id="bFI-OE-0U7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="177.5" id="bIx-PY-NUZ"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="top" secondItem="HwG-x3-Sme" secondAttribute="bottom" constant="28" id="cdA-vX-CZ5"/>
+                <constraint firstItem="jyt-Eo-S2u" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="80" id="gqC-QB-mvD"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="37" id="kj4-hv-dVE"/>
+                <constraint firstItem="Zhp-op-0lo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="sCH-Ws-0Go"/>
+                <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="RLs-TR-hhm" secondAttribute="bottom" constant="56.5" id="xjW-m7-40w"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Zhp-op-0lo" secondAttribute="bottom" constant="60" id="z8e-hW-6fx"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="136.5" y="54.5"/>
