--- a/DI-App/login/Login.xib
+++ b/DI-App/login/Login.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Login" customModule="DI_App" customModuleProvider="target">
             <connections>
                 <outlet property="emailTxtField" destination="9a0-Hw-4ib" id="FJQ-66-65d"/>
+                <outlet property="logReg" destination="CR9-uF-O2v" id="w00-DS-Wnh"/>
                 <outlet property="mainView" destination="iN0-l3-epB" id="lEt-Oa-yCk"/>
                 <outlet property="passwordTextField" destination="OtO-rL-M6h" id="4wE-pi-RXI"/>
                 <outlet property="rememberMeButton" destination="FzO-7I-syL" id="WQ8-0f-oRk"/>
