--- a/DI-App/CalendarVC/CalendarVC.xib
+++ b/DI-App/CalendarVC/CalendarVC.xib
@@ -12,25 +12,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CalendarVC" customModule="DI_App" customModuleProvider="target">
             <connections>
-                <outlet property="mainView" destination="i5M-Pr-FkT" id="3fG-91-tO1"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="viewCalendar" destination="SCS-ju-StC" id="eby-Wr-1Yl"/>
+                <outlet property="mainView" destination="iN0-l3-epB" id="tVy-BE-jZq"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SCS-ju-StC">
-                    <rect key="frame" x="16" y="20" width="343" height="290"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ChP-wa-Y94" customClass="FSCalendar">
+                    <rect key="frame" x="16" y="29" width="343" height="292"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <constraints>
+                <constraint firstItem="ChP-wa-Y94" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="4WN-jj-uBj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ChP-wa-Y94" secondAttribute="bottom" constant="346" id="F12-Gv-wJD"/>
+                <constraint firstItem="ChP-wa-Y94" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="9" id="Vgv-xZ-da1"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ChP-wa-Y94" secondAttribute="trailing" constant="16" id="t6Q-TX-axS"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="-312" y="-187"/>
         </view>
     </objects>
 </document>
